--- a/final/app/build.gradle
+++ b/final/app/build.gradle
@@ -32,6 +32,8 @@ android {
 
 dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.viewpager:viewpager:1.0.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation fileTree(dir: 'libs', include: ['*.aar'])
